[package]
edition = "2021"
name = "rwalk"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array2d = "0.2.1"
byteorder = "1.4.3"
clap = {version = "3.0.1", features = ["derive"]}
rand = "0.8.1"
serde = {version = "1.0.133", features = ["derive"]}
tokio = {version = "1.15.0", features = ["full"]}

[dependencies.sdl2]
git = "https://github.com/rust-sdl2/rust-sdl2"
